# aratinga

./: .readthedocs.yml  README-en-US.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.md  requirements.txt
docs/advanced/: customization.md  index.md  internationalization.md
docs/api/: index.md
docs/blocks/: index.md
docs/concepts/: index.md
docs/getting-started/: index.md
docs/models/: index.md
src/aratinga/: settings.py  views.py  wagtail_hooks.py
src/aratinga/admin/: forms.py  loaders.py  models.py  settings.py  thread.py
src/aratinga/admin/migrations/: 0007_alter_themesettings_options_and_more.py
src/aratinga/blocks/: __init__.py  base_blocks.py  content_blocks.py  html_blocks.py  layout_blocks.py  section_blocks.py
src/aratinga/locale/en/LC_MESSAGES/: django.po
src/aratinga/locale/pt_BR/LC_MESSAGES/: django.po
src/aratinga/migrations/: 0011_templatepage_to_aratingapage_refactor.py  0012_alter_carouselslide_content_alter_footertext_body_and_more.py
src/aratinga/models/: pages_models.py  settings_models.py  snippets_models.py
src/aratinga/project_template/project_name/: urls.py
src/aratinga/project_template/project_name/settings/: base.py
src/aratinga/project_template/search/: views.py
src/aratinga/project_template/website/: models.py
src/aratinga/static/wagtail/: theme.css  theme.css.map
src/aratinga/templatetags/: navigation_tags.py
src/aratinga/tests/: README-en-US.md  README.md  conftest.py  test_theme.py
src/aratinga/tests/endpoint_to_endpoint/: test_theme_crud.py
(+33 files in other folders)
