[project]
name = "aratinga"
dynamic = ["version"]
description = "Wagtail + Voreios Extensions enabling rapid development of brasilian public educational-focused websites."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12, <3.15"
authors = [
    {name = "Roraimae", email = "fabio@voreios.com.br"}
]
dependencies = [
    "Django>=5.2,<7",
    "wagtail>=7.1,<7.4",
]

[project.scripts]
aratinga = "aratinga.bin:main"

[project.urls]
Source = "https://github.com/roraimae/aratinga"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./src/aratinga/__about__.py"

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
    "playwright>=1.56.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-playwright>=0.7.1",
]
